functional dynamic grid - unresponsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <link rel = "stylesheet" href="style.css">
     </head>
     <body>
-        
+        <!--Will store 16x6 grid of sqaures-->
+        <button id="boxButton">Start</button>
+        <div id="container">
+
+        </div>
     </body>
 </html>
